--- a/03.01-206-colors-starter/css/main.css
+++ b/03.01-206-colors-starter/css/main.css
@@ -73,10 +73,14 @@ footer {
 
   #column-3 {
     background-color:darkgoldenrod;
+    width:100%;
   }
 
   footer {
     background-color:darkcyan ;
+  }
+  .col-3{
+    width:50%;
   }
   
 }
@@ -98,10 +102,14 @@ footer {
 
   #column-3 {
     background-color:forestgreen ;
+    width:33.3%;
   }
 
   footer {
     background-color:gold;
+  }
+  .col-3{
+    width:33.3%;
   }
    
 }
